--- a/front-end/app/assets/stylesheet/components/_contact.scss
+++ b/front-end/app/assets/stylesheet/components/_contact.scss
@@ -1,6 +1,10 @@
 @media (min-width: $screen-lg-min) { 
   #contact {
     .company-information {
+      .company-name {
+        text-align: left;
+      }
+
       .company-introduction {
         text-align: left;
       }
@@ -20,6 +24,9 @@
 @media (max-width: $screen-lg-min) { 
   #contact {
     .company-information {
+      .company-name {
+        text-align: center;
+      }
       .company-map{
           height: 200px;
           display: flex;
@@ -84,9 +91,7 @@
           height: 275px;
           padding-top: 15px;
           word-break: break-all;
-          .company-name {
-            text-align: center;
-          }
+
           .glyphicon {
             margin: 3px 5px 3px 3px;
             font-size: 15px;
